# rust-blog-example

./: .gitignore  Cargo.bkup  Cargo.toml  README.md  README.md.backup
src/: main.rs
templates/: base.html  index.html  posts.html
