[package]
name = "blog-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "blog-rs" 
path = "src/main.rs"

[[bin]]
name = "markd"
path = "src/bin/markd.rs"

[dependencies]
askama = {version="0.12.0", features=["markdown"]}
tokio = {version="1.13.0", features = ["macros", "rt-multi-thread"]}
axum =  "0.6.4"
sqlx = {version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "time"]} 
tower-http = {version = "0.4", features=["full"]}
