[package]
name = "blog-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version="1.43.0", features = ["macros", "rt-multi-thread"]}
axum = "0.8.1"
askama = {version="0.12.1", features=["markdown"]}
sqlx = {version="0.8.3", features = ["runtime-tokio-rustls", "postgres", "macros", "time"]}
tower-http = {version="0.6.2", features=["full"]}

[[bin]]
name = "blog-rs"
path = "src/main.rs"

[[bind]]
name = "markd"
path = "src/bin/markd.rs"
